--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "phin": "^3.5.0",
     "robotjs": "^0.6.0"
   }
 }
